Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-907

Qpid Proton Point to Point Hang on CentOS 6 pn_messenger_send

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • proton-0.8, proton-0.9.1
    • proton-0.10
    • proton-c
    • None
    • CentOS 6 (both VM and native 64-bit) and RHEL 6

    Description

      See thread at http://qpid.2158936.n2.nabble.com/Strange-behaviour-for-pn-messenger-send-on-CentOS-6-td7625846.html.

      Key points:

      • pn_messenger_send will hang on CentOS 6 if the destination is not yet up
      • Works fine on Fedora 21 and 22 (by 'fine', i mean it will attempt to send, fail and move on)
      • Can be recreated by running the send.c application when recv.c is not yet running
      • Proton burns CPU as it hangs

      This effectively deadlocks our application. So far, I’ve tried compiling qpid proton c myself (both 0.8 and 0.9.1), setting pn_messenger_send timeout to 1 (it was previously -1), turning off iptables entirely and disabling selinux and rebooting but no luck.

      Attachments

        1. PROTON-907-workaround.patch
          0.5 kB
          Gordon Sim

        Activity

          People

            gsim Gordon Sim
            fquinn Frank Quinn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: