PROTON-907: check error status of connections selectable, and close transport if set